--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
   <artifactId>atmosphere-calc</artifactId>
   <version>1.0-SNAPSHOT</version>
 
+  <scm>
+    <url>https://github.com/jcsirot/atmosphere-calculator</url>
+    <connection>scm:git:git://github.com/jcsirot/atmosphere-calculator.git</connection>
+    <developerConnection>scm:git:git@github.com:jcsirot/atmosphere-calculator.git</developerConnection>
+  </scm>
+
   <dependencies>
     <dependency>
       <groupId>net.code-story</groupId>
