--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>atmosphere-calc</groupId>
   <artifactId>atmosphere-calc</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.1.0</version>
 
   <scm>
     <url>https://github.com/jcsirot/atmosphere-calculator</url>
     <connection>scm:git:git://github.com/jcsirot/atmosphere-calculator.git</connection>
     <developerConnection>scm:git:git@github.com:jcsirot/atmosphere-calculator.git</developerConnection>
+    <tag>0.1.0</tag>
   </scm>
 
   <dependencies>
