[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
 
   <groupId>atmosphere-calc</groupId>
   <artifactId>atmosphere-calc</artifactId>
-  <version>0.1.0</version>
+  <version>0.2-SNAPSHOT</version>
 
   <scm>
     <url>https://github.com/jcsirot/atmosphere-calculator</url>
     <connection>scm:git:git://github.com/jcsirot/atmosphere-calculator.git</connection>
     <developerConnection>scm:git:git@github.com:jcsirot/atmosphere-calculator.git</developerConnection>
-    <tag>0.1.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <dependencies>
