--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,10 @@
     <developerConnection>scm:git:git@github.com:jcsirot/atmosphere-calculator.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
-
+<properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+</properties>
   <dependencies>
     <dependency>
       <groupId>net.code-story</groupId>
