--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,7 +4,7 @@
 
 node {
 
-//Specifiyng the envrionment variables which will be used during the build process
+// Stage : Specifiyng the envrionment variables which will be used during the build process
 
     stage 'Defining Envrionment Variables'
 
@@ -14,7 +14,7 @@ node {
         //Maven (should be configured in Jenkins)
         def mvnHome = tool "Maven 3.x"
  
-//Build phase  
+// Stage : Build phase  
 
     stage 'Build'
 
@@ -24,7 +24,7 @@ node {
         // packaging the project using Maven :    
         sh "${mvnHome}/bin/mvn clean package"
 
-//Unit testing phase 
+// Stage : Unit testing phase 
 
     stage 'Unit Tests'
 
@@ -34,19 +34,25 @@ node {
         //saving the unit tests report : 
         step([$class: 'JUnitResultArchiver', testResults: '**/target/surefire-reports/TEST-*.xml'])
 
-//Building a docker image of the project
+// Stage : Building a docker image of the project
 
     stage 'Build Docker image'
     
         //building the docker image by specifiying the snapshot name which is already specified in the POM.xml
     def image = docker.build('mahmoudmahdi24/atmo-calc:snapshot', '.')
   
- //   stage 'Acceptance Tests'
- //     image.withRun('-p 8181:8181') {c ->
- //         sh "${mvnHome}/bin/mvn verify"
- //     }
+
+ //  Stage : Running acceptance test
+    stage 'Acceptance Tests'
+        sh"${mvnHome}/bin/mvn exec:java -Dexec.mainClass="com.chelonix.atmocalc.server.Main"
+        
+        image.withRun('-p 8181:8181') {c ->
+            sh "${mvnHome}/bin/mvn verify"
+        }
+
  //   step([$class: 'JUnitResultArchiver', testResults: '**/target/failsafe-reports/TEST-*.xml'])
 
+// Stage : Pushing the docker image 
  //   stage 'Push Docker image'
  //   docker.withRegistry("https://hub.docker.com/r/dockermahmoud", "dockermahmoud") {
  //      image.push()
