--- a/JenkinsFile
+++ b/JenkinsFile
@@ -43,12 +43,8 @@ node {
   
 
  //  Stage : Running acceptance test
-    stage 'Acceptance Tests'
+    stage 'Running program'
         sh "${mvnHome}/bin/mvn exec:java -Dexec.mainClass="+"com.chelonix.atmocalc.server.Main"
-        
-        image.withRun('-p 8181:8181') {c ->
-            sh "${mvnHome}/bin/mvn verify"
-        }
 
  //   step([$class: 'JUnitResultArchiver', testResults: '**/target/failsafe-reports/TEST-*.xml'])
 
@@ -58,3 +54,10 @@ node {
  //      image.push()
  //   }
 }
+
+     node {   
+        image.withRun('-p 8181:8181') {c ->
+            sh "${mvnHome}/bin/mvn verify"
+        }
+    }
+
