--- a/JenkinsFile
+++ b/JenkinsFile
@@ -43,12 +43,13 @@ node {
   
 
  //  Stage : Running acceptance test
-    stage 'Running program'
+    stage 'Acceptance tests'
         sh "nohup ${mvnHome}/bin/mvn exec:java -Dexec.mainClass="+"com.chelonix.atmocalc.server.Main &"
 
         image.withRun('-p 8181:8181') {c ->
             sh "${mvnHome}/bin/mvn verify"
         }
+        step([$class: 'JUnitResultArchiver', testResults: '**/target/failsafe-reports/TEST-*.xml'])
 
  //   step([$class: 'JUnitResultArchiver', testResults: '**/target/failsafe-reports/TEST-*.xml'])
 
