--- a/JenkinsFile
+++ b/JenkinsFile
@@ -59,8 +59,8 @@ node {
 
 //  Stage : Pushing the docker image 
     stage 'Push Docker image'
-    
-    docker.withRegistry("https://hub.docker.com/r/dockermahmoud", "dockermahmoud") {
+    //https://hub.docker.com/r/dockermahmoud/dockermahmoud/
+    docker.withRegistry("https://hub.docker.com/r/dockermahmoud/dockermahmoud/", "dockermahmoud") {
        image.push()
     }
 }
