--- a/JenkinsFile
+++ b/JenkinsFile
@@ -39,7 +39,7 @@ node {
     stage 'Build Docker image'
     
         //building the docker image by specifiying the snapshot name which is already specified in the POM.xml
-        def image = docker.build('mahmoudmahdi24/atmo-calc:snapshot', '.')
+        def image = docker.build('dockermahmoud/dockermahmoud', '.')
   
 
  //  Stage : Running acceptance test
