--- a/JenkinsFile
+++ b/JenkinsFile
@@ -19,13 +19,12 @@ node {
         git url: 'https://github.com/mahmoudmahdi24/atmosphere-calculator'
  
  //Stage : checkstyle tests
-    stage "site"
-       sh"${mvnHome}/bin/mvn site" 
-        
     stage "checkstyle"
 
         //launching checkstyle tests
         sh"${mvnHome}/bin/mvn checkstyle:checkstyle"
+
+            step([$class: 'CheckStylePublisher', pattern: '**/checkstyle-result.xml', unstableTotalAll: '0', usePreviousBuildAsReference: true])
 
 // Stage : Build phase  
 
@@ -54,13 +53,13 @@ node {
 
  //  Stage : Running acceptance test
     stage 'Acceptance tests'
-        
-        //running the app's server in background
-        sh "nohup ${mvnHome}/bin/mvn exec:java -Dexec.mainClass="+"com.chelonix.atmocalc.server.Main &"
 
         //running acceptance tests on the created docker image
         image.withRun('-p 8181:8181') {c ->
+
+            //running the app's server in background
             sh "nohup ${mvnHome}/bin/mvn exec:java -Dexec.mainClass="+"com.chelonix.atmocalc.server.Main &"
+
             sh "${mvnHome}/bin/mvn verify"
         }
 
