--- a/JenkinsFile
+++ b/JenkinsFile
@@ -36,11 +36,11 @@ node {
 
         step([$class: 'PmdPublisher', testResults: '**/pmd.xml'])
 
-//Stage : pmd tests
+//Stage : findbugs tests
     stage "findbugs"
 
         //launching checkstyle tests
-        sh"${mvnHome}/bin/mvn findbugs:gui:findbugs:gui"
+        sh"${mvnHome}/bin/mvn findbugs:findbugs"
 
         step([$class: 'FindBugsPublisher', testResults: '**/findbugsXml.xml'])        
    
