--- a/JenkinsFile
+++ b/JenkinsFile
@@ -63,6 +63,11 @@ node {
 
         //saving the unit tests report : 
         step([$class: 'JUnitResultArchiver', testResults: '**/target/surefire-reports/TEST-*.xml'])
+        
+        
+   stage name: 'plan', concurrency: 1
+        sh "~/terraform-directory/terraform plan --out plan"
+
 
  //  Stage : Running acceptance test
 
@@ -77,8 +82,9 @@ node {
         
         //saving the acceptance tests reports
         step([$class: 'JUnitResultArchiver', testResults: '**/target/failsafe-reports/TEST-*.xml'])
-
-
+        
+    stage 'Apply terraform'
+sh "~/terraform-directory/terraform apply plan"
 }
 
 
